--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,12 @@ body {
 .unsubscribe-link {
     display: block;
     margin: 0;
+    color: blue;
 }
 
 /* Mailto link */
 .mailto-link {
     display: block;
     margin: 0;
+    color: blue;
 }
