--- a/styles.css
+++ b/styles.css
@@ -5,41 +5,53 @@ body {
 
 /* Container (wrapper) */
 .container {
-    font-family: sans-serif, Arial, Helvetica;
+    font-family: Calibri, Arial, sans-serif;
     font-size: 16px;
-    font-weight: normal;
-    max-width: 640px;
+    border: 0;
+    width: 100%;
+}
+
+/* width for main email body */
+.widthWrapper {
+    width: 640px;
 }
 
 /* All p tags */
-.container p {
+p {
     margin: 0 0 16px 0;
+    font-family: Calibri, Arial, sans-serif;
+    font-size: 16px;
+}
+
+/* All h1 tags */
+h1 {
+    font-family: Calibri, Arial, sans-serif;
+}
+
+/* All td tags */
+td {
+    font-family: Calibri, Arial, sans-serif;
 }
 
 /* All tables */
-.container table {
+table {
     border: 0;
     border-spacing: 0;
     padding: 0;
 }
 
-/* All images */
-.container img {
-    display: block;
-}
-
 /* Preheader */
 .preheader {
-    color: transparent;
-    display: none;
-    height: 0;
-    max-height: 0;
-    max-width: 0;
-    opacity: 0;
-    overflow: hidden;
-    mso-hide: all;
-    visibility: hidden;
-    width: 0;
+    display:none !important;
+    visibility:hidden;
+    mso-hide:all;
+    font-size:1px;
+    color:#ffffff;
+    line-height:1px;
+    max-height:0;
+    max-width:0;
+    opacity:0;
+    overflow:hidden;
 }
 
 /* Header */
@@ -68,9 +80,9 @@ body {
 /* Button */
 .container .button {
     padding: 12px 18px 12px 18px;
-    border-radius:5px; 
+    border-radius:5px;
     background-color: #1F7F4C;
-    margin: 0 0 16px 0; 
+    margin: 0 0 16px 0;
 }
 .container .button td {
     text-align: center;
